feat: 實作離線題庫同步功能，包含題目與圖片快取。

--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.35.0",
+    "dexie": "^4.2.1",
+    "dexie-react-hooks": "^4.2.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@google/genai": "^1.35.0"
+    "vite-plugin-pwa": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
